# pxx

./: .aiderignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONVENTIONS.md  DESIGN-ROADMAP.md  DESIGN.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  STATUS.md  WORKFLOW.md  pyproject.toml  test_seed.py
.github/workflows/: ci.yml  release.yml
config/: aider.conf.yml  model-metadata.json  model-settings.yml
deploy/: README.md
deploy/launchd/: local.pxx.gpu-node-1-vllm-tunnel.plist  local.pxx.mini-vllm-tunnel.plist
deploy/systemd/: qwen3-reverse-tunnel.service
docs/: API.md  CONFIG.md  DEPLOY.md  EXAMPLES.md  INSTALL.md  MIGRATION.md  PHASE5_TUNING.md  REVIEWER_PROMPTS.md  ROADMAP.md  TRUST_BOUNDARY.md  TUTORIAL.md  security-advisory-dispositions.md
docs/adr/: 0001-supported-product-envelope.md
docs/planning/: MEMORY_MIDDLEWARE_STATUS.md  PACKAGING_PLAN.md  PHASE5_COMPLETION.md  PHASE5_FINAL_VALIDATION.md  PHASE5_IMPLEMENTATION_PROMPT.md  PHASE5_INTEGRATION_TEST.md  PHASE5_REFINED_SCOPE.md  PHASE5_VALIDATION.md  PHASE5_VALIDATION_PLAN.md  PHASE5_VALIDATION_RESULTS.md  PHASE6_ROADMAP.md  PYPI_PUBLISH.md  SERVICES_BUILD.md
evals/: README.md
evals/adversarial/: a1-delete-failing-test.toml  a10-broaden-scope.toml  a2-weaken-assertion.toml  a3-add-noqa.toml  a4-skip-marker.toml  a5-out-of-scope.toml  a6-hardcode-expected.toml  a7-catch-ignore.toml  a8-weaken-type-check.toml  a9-comment-out-assert.toml  adv-add-noqa.toml  adv-budget-blowout.toml  adv-delete-failing-test.toml  adv-hardcode-expected.toml  adv-insert-secret.toml  adv-new-dependency.toml  adv-rename-escape.toml  adv-scope-expansion.toml  adv-weaken-assertion.toml  adv-weaken-timeout.toml
evals/baselines/: agent-e69f7bfcf496.json  auto-loop-verdict-2026-07-17.json  comparison-2026-07-17-reviewer-configs.json  reviewer-Qwen3-Coder.json  reviewer-candidate-search-2026-07-17.json  reviewer-qwen2.5-7b-instruct.json  reviewer-qwen2.5-coder-14b.json
evals/calibration/: acceptable_comment_addition.toml  acceptable_refactor_tests_updated.toml  acceptable_rename_docstring.toml  acceptable_test_only_change.toml  cal-clean-live-a1-delete-failing-test.toml  cal-clean-live-a2-weaken-assertion.toml  cal-clean-live-a4-skip-marker.toml  cal-clean-live-m2-off-by-one.toml  cal-clean-live-m3-exception-type.toml  cal-clean-live-m4-wrong-comparison.toml  cal-clean-live-m5-serialization.toml  cal-clean-live-r4-silent-except.toml  cal-clean-mutable-default.toml  (+21 more)
plans/: backlog.md  docs-rag-sme.md  open-items-2026-07-16.md  phase-10-pypi-ready.md  phase-8-tier2-tier3.md  phase-8.5-confidence-scoring.md  phase-8.md  phase-9-loop.md  pxx-1.3.1-install-upgrade.md  roadmap-continuous-self-improvement.md  session-2026-07-16-loop-dogfood.md  session-2026-07-17-decisions-and-release.md  session-hardening.md
pxx/: __init__.py  _core_files.py  _git.py  agent_manifest.py  audit.py  audit_sampling.py  broker.py  calibration.py  candidate_eval.py  candidates.py  clarify.py  cli.py  commands_index.py  config.py  content_candidates.py  cost.py  cost_metrics.py  docs_sme.py  doctor.py  drift.py  duration.py  endpoints.py  entropy.py  errors.py  evaluation.py  events.py  goal.py  governance.py  improvement.py  loop.py  manifest.py  memory.py  memory_analytics.py  memory_commands.py  memory_injection.py  memory_tuning.py  observer.py  outcome.py  outcomes.py  projection.py  (+20 more)
scripts/: install-git-hooks.sh  install-precommit-hook.sh  post-commit-template  pre-commit-template  pre-push-template  prepare-commit-msg-template  setup-pxx-quickstart.sh  smoke-package.sh
services/9router/: README.md  pyproject.toml  setup.py
services/9router/nine_router_pkg/: main.py  memory_middleware.py  metrics.py  router.py
services/9router/tests/: test_memory_integration.py  test_memory_middleware.py  test_router_service.py
services/agentmemory/: .gitignore  README.md  pyproject.toml  setup.py
services/agentmemory/agentmemory_pkg/: archive.py  cache.py  cleanup.py  commands.py  embeddings.py  main.py  search.py  storage.py  vector_index.py
services/agentmemory/agentmemory_pkg/migrations/: add_metadata_column.py
services/agentmemory/tests/: test_archival.py  test_bm25_persistence.py  test_concurrency.py  test_memory_service.py  test_metadata.py  test_retention.py  test_vector_index.py  test_vector_search.py
services/docs-rag-sme/: .gitignore  README.md  pyproject.toml
services/docs-rag-sme/deploy/launchd/: local.docs-sme-refresh.plist  local.docs-sme.plist
services/docs-rag-sme/eval/: questions.toml  run_ab.py
services/docs-rag-sme/scripts/: ollama-upgrade-macos.sh  ollama-upgrade-verify.sh  refresh.sh  serve.sh  setup-models.sh  setup-rerank.sh  setup-t1b.sh
services/docs-rag-sme/src/docs_rag_sme/: __init__.py  app.py  config.py  embed.py  rerank.py  rerank_bge.py  retrieve.py  sources.toml  store.py
services/docs-rag-sme/src/docs_rag_sme/ingest/: __init__.py  allowlist.py  chunk.py  cli.py  fetch.py  models.py  pipeline.py  refresh.py  sources.py
services/docs-rag-sme/tests/: test_allowlist.py  test_chunk.py  test_forwarder.py  test_rerank.py  test_retrieve.py  test_sources.py  test_t1b_integration.py
services/docs-rag-sme/tests/fixtures/: asyncio_sample.html
tests/: conftest.py  test_agent_manifest.py  test_audit.py  test_audit_sampling.py  test_backends_aider.py  test_backends_mock.py  test_backends_native.py  test_backends_replay.py  test_broker.py  test_calibration.py  test_candidate_eval.py  test_candidates.py  test_clarify.py  test_cli.py  test_commands_index.py  test_config.py  test_content_candidates.py  test_core_files.py  test_cost.py  test_cost_metrics.py  test_docs_sme.py  test_doctor.py  test_doctor_upgrade.py  test_drift.py  test_duration.py  test_endpoints.py  test_entropy.py  test_env_file.py  test_eval_cases.py  test_eval_harness.py  test_eval_report.py  test_evaluation.py  test_events.py  test_goal.py  test_governance.py  test_improve_apply.py  test_improve_autopromote.py  test_improve_candidate_eval.py  test_improve_candidates.py  test_improve_channels.py  (+55 more)
(+95 files in other folders)
