[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pxx-orchestrator"
version = "2.0.1"
description = "Local-first AI coding agent runtime: async backends (native + aider), persistent memory, MCP, fail-closed safety gates."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "C. D. Wetzel" }]
keywords = ["ai", "coding-agent", "ollama", "local-llm", "mcp", "aider"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
# Core stays lean: everything else is an optional extra.
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
# aider's dependency chain (pydub -> audioop) requires Python < 3.13.
aider = ["aider-chat==0.86.2; python_version < '3.13'"]
server = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
pxx = "pxx.cli:main"
pxx-mcp = "pxx.mcp.server:main"

[project.urls]
Homepage = "https://github.com/cdnwetzel/pxx"
Documentation = "https://github.com/cdnwetzel/pxx/tree/main/docs"
Issues = "https://github.com/cdnwetzel/pxx/issues"
Changelog = "https://github.com/cdnwetzel/pxx/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["pxx", "pxx.memory", "pxx.tools", "pxx.backends", "pxx.mcp", "pxx.eval", "pxx.improve"]

[tool.setuptools.package-data]
pxx = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -W error::pytest.PytestUnraisableExceptionWarning"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "ASYNC", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pxx"]
